--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Open Trivia
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +9,37 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Open Trivia</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-card *ngIf="!running">
+      <ion-card-content>
+        <ion-item>
+          <ion-label position="floating">Pseudo</ion-label>
+          <ion-input [(ngModel)]="pseudo"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>Difficulté</ion-label>
+          <ion-select [(ngModel)]="difficullty">
+            <ion-select-option *ngFor="let item of difficulties" value="{{ item }}">
+              {{ item }}
+            </ion-select-option>
+          </ion-select>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>Sauvegarder mes informations</ion-label>
+          <ion-checkbox color="primary" checked slot="start"></ion-checkbox>
+        </ion-item>
+        <div class="ion-text-center danger">
+          <ion-label *ngIf="error" color="danger">{{ error }}</ion-label>
+        </div>
+        <ion-button (click)="register()">Commencer</ion-button>
+      </ion-card-content>
+    </ion-card>
+    <app-question *ngIf="running" pseudo="{{ pseudo }}"></app-question>
   </div>
 </ion-content>
