--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -3,53 +3,46 @@
         <ion-card-title>{{ pseudo }} à toi de jouer !</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-        <ion-item>
+        <ion-item *ngIf="!finished">
         <ion-grid>
             <ion-radio-group [(ngModel)]="answered">
                 <ion-row>
                     <ion-col>
                         <ion-text>
-                            <h1>{{ question }}</h1>
+                            <h1>{{ questions[current].question }}</h1>
                         </ion-text>
                     </ion-col>
                 </ion-row>
                 <ion-row class="ion-padding-top">
-                    <ion-col>
-                        <ion-item>
-                            <ion-label>Réponse A</ion-label>
-                            <ion-radio color="primary" value="a"></ion-radio>
-                        </ion-item>
-                    </ion-col>
-                    <ion-col>
-                        <ion-item>
-                            <ion-label>Réponse B</ion-label>
-                            <ion-radio color="primary" value="b"></ion-radio>
-                        </ion-item>
-                    </ion-col>
-                </ion-row>
-                <ion-row>
-                    <ion-col>
-                        <ion-item>
-                            <ion-label>Réponse C</ion-label>
-                            <ion-radio color="primary" value="c"></ion-radio>
-                        </ion-item>
-                    </ion-col>
-                    <ion-col>
-                        <ion-item>
-                            <ion-label>Réponse D</ion-label>
-                            <ion-radio color="primary" value="d"></ion-radio>
+                    <ion-col *ngFor="let item of answers">
+                        <ion-item [ngClass]="{
+                            'good': (item == questions[current].correctAnswer && checkAnswer),
+                             'bad' : (item != questions[current].correctAnswer && checkAnswer)
+                             }"
+                        >
+                            <ion-label>{{ item }}</ion-label>
+                            <ion-radio
+                                [color]="checkAnswer == false ? 'primary' : (item == questions[current].correctAnswer) ? 'success' : 'danger'"
+                                value="{{ item }}"
+                                (click)="check()"
+                                [disabled]="checkAnswer"
+                            ></ion-radio>
                         </ion-item>
                     </ion-col>
                 </ion-row>
             </ion-radio-group>
         </ion-grid>
         </ion-item>
+        <ion-item *ngIf="finished">
+            <h1>Score : {{ score }}</h1>
+        </ion-item>
     </ion-card-content>
 </ion-card>
 <ion-grid>
     <ion-row class="ion-text-end">
         <ion-col>
-            <ion-button [disabled]="!answered">Suivant</ion-button>
+            <ion-button [disabled]="!answered" (click)="next()" *ngIf="current + 1 < questions.length">Suivant</ion-button>
+            <ion-button *ngIf="current + 1 == questions.length && checkAnswer" (click)="end()">Voir mon score</ion-button>
         </ion-col>
     </ion-row>
 </ion-grid>
