--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -40,6 +40,6 @@
         <ion-button (click)="register()">Commencer</ion-button>
       </ion-card-content>
     </ion-card>
-    <app-question *ngIf="running" pseudo="{{ pseudo }}"></app-question>
+    <app-question *ngIf="running" pseudo="{{ pseudo }}" difficulty="{{ difficullty }}"></app-question>
   </div>
 </ion-content>
